# webhook-delivery

./: .gitignore  README.md  api_endpoints.md  dynamodb.md  endpoints.md  new_stack.py  postman_collection.json  project.md  pyproject.toml  requirements.txt
cdk/: .env.template  app.py  requirements.txt
cdk/cdk.out/: TriggerApiStack.assets.json  TriggerApiStack.template.json  manifest.json  tree.json
cdk/stacks/: trigger_api_stack.py  webhook_delivery_stack.py
docs/: TESTING.md  WEBHOOK_INTEGRATION.md  deprecated-endpoints-removal-summary.md  dynamodb-gsi-deployment-status.md  dynamodb-gsi-implementation-complete.md  dynamodb-gsi-implementation-plan.md  future-improvements.md  phase2-curl-test-results.md  phase4-monitoring-guide.md  postman_collection.json  restful-api-refactor-complete-summary.md  restful-api-refactor-progress.md  retry-mechanism-demo.md  two-table-refactor-summary.md
scripts/: deploy.sh  seed_tenants.py  seed_webhooks.py  verify_docs.py
src/api/: auth.py  context.py  dynamo.py  main.py  models.py  requirements.txt  routes.py
src/authorizer/: __init__.py  handler.py
src/dlq_processor/: handler.py
src/lambda_handlers/api/: auth.py  main.py  models.py
src/lambda_handlers/api/routes/: events.py
src/webhook_receiver/: main.py
src/worker/: README.md  delivery.py  dynamo.py  handler.py  mock_worker.py  signatures.py
tests/: test_auth.py  test_authorizer.py  test_events.py  test_webhook_receiver_integration.py  test_webhook_receiver_manual.py  test_with_curl.sh  test_with_curl_simple.sh  webhook_receiver.py  webhook_receiver_local.py
(+32 files in other folders)
